--- a/src/components/lessons-1/ColorPicker/ColorPicker.module.css
+++ b/src/components/lessons-1/ColorPicker/ColorPicker.module.css
@@ -1,5 +1,7 @@
 .container {
   padding: 10px;
+  border: 1px solid black;
+  width: 400px;
 }
 
 .title {
@@ -7,8 +9,20 @@
 }
 
 .option {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  margin: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+}
+
+.active {
+  transform: scale(1.2);
 }
