--- a/src/components/Lessons-2/hw-01/Statistic/Statistic.css
+++ b/src/components/Lessons-2/hw-01/Statistic/Statistic.css
@@ -1,7 +1,17 @@
 .statsList {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .statsItem {
+  text-align: center;
   margin-bottom: 5px;
+  background-color: bisque;
+  padding: 5px 20px;
+  width: inherit;
+  border-radius: 5px;
 }
