--- a/src/components/Lessons-2/hw-01/Section/Section.css
+++ b/src/components/Lessons-2/hw-01/Section/Section.css
@@ -11,6 +11,8 @@
   border-radius: 25px;
   margin-bottom: 20px;
   padding: 20px;
+
+  box-shadow: 2px 2px 10px rgba(128, 128, 128, 0.562);
 }
 
 .sectionTitle {
