--- a/src/components/Lessons-2/hw-02/Common.css
+++ b/src/components/Lessons-2/hw-02/Common.css
@@ -30,9 +30,22 @@
 }
 
 .contactItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   list-style: none;
   margin: 0;
   margin-bottom: 10px;
+}
+
+.contactInfo {
+  padding: 0;
+  margin: 0;
+}
+
+.deleteBtn {
+  height: 25px;
+  margin-left: 10px;
 }
 
 .filterLabel {
